# $Id: HISTORY,v 1.1 2013-05-18 11:30:05 deraugla Exp $

Started around 27 Mar 2013 in directory coq_puiseux.
Transfered in present directory 4 Apr 2013.
Convex Hull lemmas terminated 18 May 2013.

Time      : 7 weeks
Code size : 3778 lines