@@ -1,4 +1,4 @@
-(* $Id: NotInSegment.v,v 1.224 2013-05-18 11:11:44 deraugla Exp $ *)
+(* $Id: NotInSegment.v,v 1.225 2013-05-18 19:51:56 deraugla Exp $ *)
 
 (* points not in newton segment *)
 
@@ -10,7 +10,7 @@ Require Import Slope_base.
 Require Import SlopeMisc.
 Require Import ConvexHull.
 Require Import ConvexHullMisc.
-Require Import Puiseux.
+Require Import Puiseux_base.
 Require Import NotInSegMisc.
 
 Section convex_hull.
@@ -1457,86 +1457,3 @@ reflexivity.
 Qed.
 
 End convex_hull.
-
-Record branch α :=
-  { initial_polynom : polynomial (puiseux_series α);
-    cγl : list (α * Q);
-    step : nat;
-    rem_steps : nat;
-    pol : polynomial (puiseux_series α) }.
-Arguments initial_polynom : default implicits.
-Arguments cγl : default implicits.
-Arguments step : default implicits.
-Arguments rem_steps : default implicits.
-Arguments pol : default implicits.
-
-(*
-Definition phony_monom {α β} : monomial (polynomial α β) nat :=
-  {| coeff := {| monoms := [] |}; power := 0%nat |}.
-Arguments phony_monom : default implicits.
-
-Definition puiseux_iteration k br r m γ β sol_list :=
-  let pol :=
-    let y :=
-      {| monoms :=
-           [{| coeff := {| monoms := [{| coeff := r; power := γ |}] |};
-               power := 0 |},
-            {| coeff := {| monoms := [{| coeff := one k; power := γ |}] |};
-               power := 1 |} … [] ] |}
-    in
-    let pol := apply_poly_dp_pol k br.pol y in
-    let pol := pol_div_x_power pol β in
-    let pol := cancel_pol_constant_term_if_any fld pol in
-    dp_float_round_zero fld pol
-  in
-  let finite := zero_is_root pol in
-  let cγl := [(r, γ) … br.cγl] in
-  if br.rem_steps = 0 || finite then
-    let sol := make_solution cγl in
-    Left [(sol, finite) … sol_list]
-  else if br.rem_steps > 0 then Right (pol, cγl)
-  else Left sol_list.
-
-Fixpoint puiseux_branch {α} (k : alg_cl_field α) (br : branch α Q)
-    (sol_list : list (polynomial α Q * bool)) (γβ : Q * Q) :=
-  let (γ, β) := γβ in
-  let hl :=
-    List.filter
-      (λ m,
-         let αi := valuation (coeff m) in
-         let βi := αi + (Z.of_nat (power m) # 1) * γ in
-         Qeq_bool₁ β βi)
-      (monoms (pol br))
-  in
-  let j := power (List.hd (phony_monom α Q) hl) in
-  let ml :=
-    List.map
-      (λ m,
-         {| coeff := valuation_coeff k (coeff m);
-            power := (power m - j)%nat |})
-      hl
-  in
-  let rl := roots k {| monoms := ml |} in
-  List.fold_left
-    (λ sol_list rm,
-       let (r, m) := rm in
-       if eq k r then sol_list
-       else
-         match puiseux_iteration k br r m γ β sol_list with
-         | Right (pol, cγl) => next_step k br sol_list col cγl
-         | Left sol_list => sol_list
-         end)
-    rl sol_list.
-
-Definition puiseux k nb_steps pol :=
-  let nsl := newton_segments pol in
-  let rem_steps := (nb_steps - 1)%nat in
-  List.fold_left
-    (λ sol_list γβ₁,
-       let br :=
-         {| initial_polynom := pol; cγl := []; step := 1%nat;
-            rem_steps := rem_steps; pol := pol |}
-       in
-       puiseux_branch k br sol_list γβ₁)
-    nsl [].
-*)
